--- a/create.html
+++ b/create.html
@@ -529,22 +529,24 @@
     }
     .sp-search:focus { border-color: var(--accent); }
     #sb-sprite-grid {
-        flex: 1; overflow-y: auto; padding: 4px 8px 10px;
-        display: grid; grid-template-columns: 1fr 1fr; gap: 7px;
+        flex: 1; overflow-y: auto; padding: 6px 8px 10px;
+        display: grid; grid-template-columns: 1fr 1fr; gap: 8px;
+        align-content: start;
     }
     #sb-sprite-grid::-webkit-scrollbar { width: 3px; }
     #sb-sprite-grid::-webkit-scrollbar-thumb { background: #333; border-radius: 3px; }
     .sb-sprite-card {
         background: var(--card); border: 2px solid var(--border); border-radius: 12px;
         cursor: pointer; overflow: hidden; transition: 0.2s;
-        display: flex; flex-direction: column; aspect-ratio: 1; position: relative;
+        display: flex; flex-direction: column; position: relative;
+        height: 100px;
     }
     .sb-sprite-card:hover { border-color: var(--accent); transform: translateY(-3px); box-shadow: 0 6px 18px rgba(0,0,0,0.6); }
-    .sb-sprite-card img { width: 100%; height: 100%; object-fit: contain; padding: 10px; box-sizing: border-box; }
+    .sb-sprite-card img { width: 100%; flex: 1; object-fit: contain; padding: 8px; box-sizing: border-box; min-height: 0; }
     .sb-sprite-card span {
-        position: absolute; bottom: 0; left: 0; right: 0;
-        font-size: 9px; font-weight: 800; color: white; padding: 4px 6px;
-        background: rgba(0,0,0,0.75); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+        font-size: 9px; font-weight: 800; color: #888; padding: 3px 6px 5px;
+        text-align: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+        background: rgba(0,0,0,0.4); flex-shrink: 0;
     }
     .sp-load-msg { text-align: center; padding: 30px 16px; color: #333; font-size: 12px; font-weight: 700; grid-column: 1/-1; }
 
